<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/PostBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:text="@string/post"
            />
        <TextView
            android:id="@+id/tvBarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/create_status"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/common_padding"
            android:layout_marginEnd="@dimen/common_padding"
            android:layout_toStartOf="@+id/PostBtn"
            android:layout_toEndOf="@+id/CancelBtn"
            android:gravity="center"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/edtStatus"
        android:layout_margin="5dp"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/addPhotoBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/what_s_on_your_mind"
        android:gravity="top"
        android:background="@android:color/transparent"/>
    <Button
        android:layout_margin="5dp"
        android:id="@+id/addPhotoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:text="@string/add_images_text"/>
</RelativeLayout>